k8s/API/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: fpfl-api-ingress
    namespace: fpfl
    annotations:
        kubernetes.io/ingress.class: nginx
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - api-jdk.ledger-finance.com
          secretName: fpfl-api-tls
    rules:
        - host: api-jdk.ledger-finance.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: fpfl-api-service
                            port:
                                number: 8080
